--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.elasolutions</groupId>
 	<artifactId>elaUtils</artifactId>
-	<version>1.0.3</version>
+	<version>1.0.6</version>
 	<packaging>jar</packaging>
 	<name>General utils</name>
 	<description>General utils used by elasolutions.org</description>
-	
+	<url>http://elasolutions.github.io/elaUtils/</url>
+	  
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
@@ -22,10 +23,15 @@
             <email>malcolm@nuearth.com</email>
         </developer>
     </developers>
+	
+	<scm>
+		<connection>scm:git:git://github.com/elasolutions/elaUtils.git</connection>
+		<url>https://github.com/elasolutions/elaUtils</url>
+	</scm>
     	
 	<properties>
-		<maven.compiler.target>1.6</maven.compiler.target>
-		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.source>1.7</maven.compiler.source>
 	</properties>
 
 	<dependencies>
@@ -43,13 +49,20 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
-			<version>1.8.1</version>
+			<version>1.9</version>
 		</dependency>
 		<dependency>
 			<groupId>com.caucho</groupId>
 			<artifactId>hessian</artifactId>
 			<version>4.0.38</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>commons-validator</groupId>
+		    <artifactId>commons-validator</artifactId>
+		    <version>1.4.1</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -105,7 +118,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9.1</version>
+				<version>2.10.3</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
